--- a/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.view.valuebindings/plugin.xml
@@ -48,7 +48,7 @@
          point="org.eclipse.ui.views.properties.tabbed.propertyContributor">
       <propertyContributor
             contributorId="org.openmodelica.modelicaml.view.valuebindings.views.ValueBindingsView"
-            labelProvider="org.openmodelica.modelicaml.view.valuebindings.sections.DetailLabelProvider">
+            labelProvider="org.openmodelica.modelicaml.view.valuebindings.sections.LabelProvider_Details">
          <propertyCategory
                category="org.eclipse.papyrus.modelicaml"></propertyCategory>
       </propertyContributor>
@@ -65,8 +65,14 @@
          <propertyTab
                afterTab="org.openmodelica.modelicaml.view.valuebindings.properties.tab.details"
                category="org.eclipse.papyrus.modelicaml"
-               id="org.openmodelica.modelicaml.view.valuebindings.properties.tab.operation"
-               label="Operation">
+               id="org.openmodelica.modelicaml.view.valuebindings.properties.tab.clientoperationeditor"
+               label="Client Operation">
+         </propertyTab>
+         <propertyTab
+               afterTab="org.openmodelica.modelicaml.view.valuebindings.properties.tab.details"
+               category="org.eclipse.papyrus.modelicaml"
+               id="org.openmodelica.modelicaml.view.valuebindings.properties.tab.provideroperationeditor"
+               label="Provider Operation">
          </propertyTab>
       </propertyTabs>
    </extension>
@@ -75,7 +81,7 @@
       <propertySections
             contributorId="org.openmodelica.modelicaml.view.valuebindings.views.ValueBindingsView">
          <propertySection
-               class="org.openmodelica.modelicaml.view.valuebindings.sections.PropertySectionDetails"
+               class="org.openmodelica.modelicaml.view.valuebindings.sections.PropertySection_Details"
                id="org.openmodelica.modelicaml.view.valuebindings.propertySection.details"
                tab="org.openmodelica.modelicaml.view.valuebindings.properties.tab.details">
             <input
@@ -83,10 +89,19 @@
             </input>
          </propertySection>
          <propertySection
-               class="org.openmodelica.modelicaml.view.valuebindings.sections.PropertySectionOperation"
-               filter="org.openmodelica.modelicaml.view.valuebindings.filters.PropertySectionFilter_Operation"
-               id="org.openmodelica.modelicaml.view.valuebindings.propertySection.operation"
-               tab="org.openmodelica.modelicaml.view.valuebindings.properties.tab.operation">
+               class="org.openmodelica.modelicaml.view.valuebindings.sections.PropertySection_ClientOperationEditor"
+               filter="org.openmodelica.modelicaml.view.valuebindings.filters.PropertySectionFilter_ClientOperation"
+               id="org.openmodelica.modelicaml.view.valuebindings.propertySection.clientoperationeditor"
+               tab="org.openmodelica.modelicaml.view.valuebindings.properties.tab.clientoperationeditor">
+            <input
+                  type="org.openmodelica.modelicaml.view.valuebindings.model.TreeObject">
+            </input>
+         </propertySection>
+         <propertySection
+               class="org.openmodelica.modelicaml.view.valuebindings.sections.PropertySection_ProviderOperationEditor"
+               filter="org.openmodelica.modelicaml.view.valuebindings.filters.PropertySectionFilter_ProviderOperation"
+               id="org.openmodelica.modelicaml.view.valuebindings.propertySection.providerperationeditor"
+               tab="org.openmodelica.modelicaml.view.valuebindings.properties.tab.provideroperationeditor">
             <input
                   type="org.openmodelica.modelicaml.view.valuebindings.model.TreeObject">
             </input>
