- Doc. header update - Modelica <<Import>> stereotype handling

--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
@@ -18,6 +18,9 @@ p_path_ModelicaRelationsConstructs = ModelicaML::ModelicaRelationsConstructs
 p_path_ModelicaRequirementConstructs = ModelicaML::ModelicaRequirementConstructs
 p_path_ModelicaSimulationConstructs = ModelicaML::ModelicaSimulationConstructs
 p_path_ModelicaAnnotationConstructs = ModelicaML::ModelicaAnnotationConstructs
+
+p_path_ModelicaMLValueBinding = "ModelicaML::ValueBinding";
+
 	#### ModelicaML specific END
 
 # Stereotypes: Modelica Classes
@@ -56,6 +59,7 @@ s_typeExtend = TypeRelation
 s_redeclare = RedeclareRelation
 s_partialDerivativeFunction = PartialDerivativeOfFunctionRelation
 s_constrainedby = ConstrainedByRelation
+s_import = Import
 
 
 # Stereotypes: Modelica Function Properties
