- Doc. header update - Profile update: <<Import>> stereotype - Template model update

--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.properties
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.properties
@@ -2,14 +2,13 @@
 # The content of this file is a copy of the file located in the plug-in "org.openmodelica.modelicaml.gen.modelica".
 #######################
 
-
 # Configuration 
 c_profileName = ModelicaML
 
 # Configuration: Code generation
 c_outputFolder = code-gen/
 c_includeModelComments = true
-c_includeAsserts = false
+c_includeAsserts = true
 	#debugMode is used to include code for, e.g. checking if only one OR state is active at an instance or if states are deactivated if the parent state is not active.
 c_debugMode = true
 
@@ -25,7 +24,7 @@ p_path_ModelicaSimulationConstructs = ModelicaML::ModelicaSimulationConstructs
 p_path_ModelicaAnnotationConstructs = ModelicaML::ModelicaAnnotationConstructs
 	#### ModelicaML specific END
 
-# Stereotypes: Modelica Classes   
+# Stereotypes: Modelica Classes
 s_class = ModelicaClass
 s_package = ModelicaPackage
 s_operator = Operator
@@ -41,7 +40,6 @@ s_calculationModel = CalculationModel
 s_requirement = Requirement
 s_requirementRepresentative = RequirementRepresentative
 s_measureOfEffectiveness = MeasureOfEffectiveness
-
 s_ModelicaModelReference = ModelicaModelReference
 s_p_modelPath = modelPath
 	#### ModelicaML specific END
@@ -62,6 +60,7 @@ s_typeExtend = TypeRelation
 s_redeclare = RedeclareRelation
 s_partialDerivativeFunction = PartialDerivativeOfFunctionRelation
 s_constrainedby = ConstrainedByRelation
+s_import = Import
 
 
 # Stereotypes: Modelica Function Properties
