--- a/modelicaml/org.openmodelica.simulation.environment/plugin.xml
+++ b/modelicaml/org.openmodelica.simulation.environment/plugin.xml
@@ -203,5 +203,11 @@
             name="OpenModelica Interactive">
       </page>
    </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer
+            class="org.openmodelica.simulation.environment.AbstractPreferenceInitializerForOMI">
+      </initializer>
+   </extension>
 
 </plugin>
