--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
@@ -18,6 +18,7 @@ p_path_ModelicaRelationsConstructs = ModelicaML::ModelicaRelationsConstructs
 p_path_ModelicaRequirementConstructs = ModelicaML::ModelicaRequirementConstructs
 p_path_ModelicaSimulationConstructs = ModelicaML::ModelicaSimulationConstructs
 p_path_ModelicaAnnotationConstructs = ModelicaML::ModelicaAnnotationConstructs
+p_path_ModelicaMLTestDefinition = ModelicaML::TestDefinition
 
 p_path_ModelicaMLValueBinding = "ModelicaML::ValueBinding";
 
@@ -36,6 +37,7 @@ s_enumeration = ModelicaEnumeration
 s_function = Function
 	### ModelicaML specific
 s_calculationModel = CalculationModel
+s_testScenario = TestScenario
 s_requirement = Requirement
 s_requirementRepresentative = RequirementRepresentative
 s_measureOfEffectiveness = MeasureOfEffectiveness
@@ -43,7 +45,13 @@ s_ModelicaModelReference = ModelicaModelReference
 s_p_modelPath = modelPath
 	#### ModelicaML specific END
 
-
+	### ModelicaML specific: Test Definition Dependencies
+s_requires = Requires
+s_requiredFor = RequiredFor
+s_usedToVerify = UsedToVerify
+	#### ModelicaML specific END: Test Definition Dependencies
+	
+	
 # Stereotypes: Modelica Classes Properties
 s_p_final = final
 s_p_partial	= partial
