--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.properties
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.properties
@@ -1,7 +1,6 @@
 #######################
 # The content of this file is a copy of the file located in the plug-in "org.openmodelica.modelicaml.gen.modelica".
 #######################
-
 # Configuration 
 c_profileName = ModelicaML
 
@@ -22,6 +21,10 @@ p_path_ModelicaRelationsConstructs = ModelicaML::ModelicaRelationsConstructs
 p_path_ModelicaRequirementConstructs = ModelicaML::ModelicaRequirementConstructs
 p_path_ModelicaSimulationConstructs = ModelicaML::ModelicaSimulationConstructs
 p_path_ModelicaAnnotationConstructs = ModelicaML::ModelicaAnnotationConstructs
+p_path_ModelicaMLTestDefinition = ModelicaML::TestDefinition
+
+p_path_ModelicaMLValueBinding = "ModelicaML::ValueBinding";
+
 	#### ModelicaML specific END
 
 # Stereotypes: Modelica Classes
@@ -37,6 +40,7 @@ s_enumeration = ModelicaEnumeration
 s_function = Function
 	### ModelicaML specific
 s_calculationModel = CalculationModel
+s_testScenario = TestScenario
 s_requirement = Requirement
 s_requirementRepresentative = RequirementRepresentative
 s_measureOfEffectiveness = MeasureOfEffectiveness
@@ -44,7 +48,13 @@ s_ModelicaModelReference = ModelicaModelReference
 s_p_modelPath = modelPath
 	#### ModelicaML specific END
 
-
+	### ModelicaML specific: Test Definition Dependencies
+s_requires = Requires
+s_requiredFor = RequiredFor
+s_usedToVerify = UsedToVerify
+	#### ModelicaML specific END: Test Definition Dependencies
+	
+	
 # Stereotypes: Modelica Classes Properties
 s_p_final = final
 s_p_partial	= partial
