- With multiple frames we need to tell GDB with which frame we are working. - Stack select frame command.

--- a/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
+++ b/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
@@ -36,6 +36,7 @@ MDTLineBreakpoint.removeBreakPoint.BreakDelete.NoAnswer=-break-delete command re
 GDBThread.resume.ExecContinue.NoAnswer=-exec-continue command returned null.
 GDBThread.getStackFrames.StackListVariables.NoAnswer=-stack-list-variables command returned null.
 GDBThread.getStackFrames.StackInfoFrame.NoAnswer=-stack-info-frame command returned null.
+GDBThread.setCurrentStackFrame.StackSelectFrame.NoAnswer=-stack-select-frame command returned null.
 GDBThread.stepOver.ExecNext.NoAnswer=-exec-next command returned null.
 GDBThread.stepOver.ExecStep.NoAnswer=-exec-step command returned null.
 GDBThread.getStackInfoDepth.StackInfoDepth.NoAnswer=-stack-info-depth command returned null.
