--- a/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
+++ b/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
@@ -34,7 +34,7 @@
 MDTLineBreakpoint.removeBreakPoint.BreakInsert.NoAnswer=-break-insert command returned null.
 MDTLineBreakpoint.removeBreakPoint.BreakDelete.NoAnswer=-break-delete command returned null.
 GDBThread.resume.ExecContinue.NoAnswer=-exec-continue command returned null.
-GDBThread.getStackFrames.StackListVariables.NoAnswer=-stack-list-variables command returned null.
+GDBStackFrame.computeVariables.StackListVariables.NoAnswer=-stack-list-variables command returned null.
 GDBThread.getStackFrames.StackInfoFrame.NoAnswer=-stack-info-frame command returned null.
 GDBThread.setCurrentStackFrame.StackSelectFrame.NoAnswer=-stack-select-frame command returned null.
 GDBThread.stepOver.ExecNext.NoAnswer=-exec-next command returned null.
