- exception handling. - some minor bugs fixed.

--- a/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
+++ b/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
@@ -30,7 +30,7 @@
 #####################################################################
 # Author : Adeel Asghar
 #####################################################################
-
+GDBThread.start.ExecRun.NoAnswer=-exec-run command returned null.
 MDTLineBreakpoint.removeBreakPoint.BreakInsert.NoAnswer=-break-insert command returned null.
 MDTLineBreakpoint.removeBreakPoint.BreakDelete.NoAnswer=-break-delete command returned null.
 GDBThread.resume.ExecContinue.NoAnswer=-exec-continue command returned null.
