- exec-interrupt implemented for windows.

--- a/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
+++ b/org.modelica.mdt.debug.core/src/org/modelica/mdt/debug/core/MDTDebugCorePluginResources.properties
@@ -34,6 +34,7 @@ GDBThread.start.ExecRun.NoAnswer=-exec-run command returned null.
 MDTLineBreakpoint.removeBreakPoint.BreakInsert.NoAnswer=-break-insert command returned null.
 MDTLineBreakpoint.removeBreakPoint.BreakDelete.NoAnswer=-break-delete command returned null.
 GDBThread.resume.ExecContinue.NoAnswer=-exec-continue command returned null.
+GDBDebugTarget.handleSignalEvent.ExecContinue.NoAnswer=-exec-continue command returned null.
 GDBStackFrame.computeVariables.StackListVariables.NoAnswer=-stack-list-variables command returned null.
 GDBThread.getStackFrames.StackInfoFrame.NoAnswer=-stack-info-frame command returned null.
 GDBThread.setCurrentStackFrame.StackSelectFrame.NoAnswer=-stack-select-frame command returned null.
