--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/build.properties
@@ -10,4 +10,5 @@ bin.includes = .,\
                bin/validation.chain,\
                icons/,\
                bin/ModelicaML2Modelica_v04.mt,\
-               bin/org/
+               bin/org/,\
+               bin/code_generation_and_sim_test_models_data_generation.chain
