--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
@@ -38,6 +38,7 @@ s_function = Function
 	### ModelicaML specific
 s_calculationModel = CalculationModel
 s_testScenario = TestScenario
+s_test = Test
 s_requirement = Requirement
 s_requirementRepresentative = RequirementRepresentative
 s_measureOfEffectiveness = MeasureOfEffectiveness
